--- a/Project/Source/Presentation/LaunchView/Launch.storyboard
+++ b/Project/Source/Presentation/LaunchView/Launch.storyboard
@@ -23,19 +23,28 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y9v-Og-4OW" customClass="FourButtom" customModule="Project" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="734" width="414" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Y9v-Og-4OW" secondAttribute="height" multiplier="207:64" id="7P3-XW-i19"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QxI-Qa-HM0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="FIt-g0-AN2" firstAttribute="centerX" secondItem="G2x-Kv-uLF" secondAttribute="centerX" id="5es-es-h0w"/>
                             <constraint firstItem="FIt-g0-AN2" firstAttribute="centerY" secondItem="G2x-Kv-uLF" secondAttribute="centerY" id="DvG-1K-5aS"/>
+                            <constraint firstItem="Y9v-Og-4OW" firstAttribute="leading" secondItem="QxI-Qa-HM0" secondAttribute="leading" id="UHu-ge-mX8"/>
+                            <constraint firstItem="QxI-Qa-HM0" firstAttribute="trailing" secondItem="Y9v-Og-4OW" secondAttribute="trailing" id="V14-aN-Bjp"/>
+                            <constraint firstItem="QxI-Qa-HM0" firstAttribute="bottom" secondItem="Y9v-Og-4OW" secondAttribute="bottom" id="t3M-jW-fjb"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="a0q-KI-VpH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cdj-Wu-tI5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="284.05797101449275" y="75.669642857142847"/>
+            <point key="canvasLocation" x="282.60869565217394" y="75.669642857142847"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="P4l-Rx-S5L">
